welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: value % is not a member of java.awt.Color
		setCouleurBrosse(T(i+decalage)%T.length)
                                              ^